--- a/views/user_dashboard.hbs
+++ b/views/user_dashboard.hbs
@@ -103,7 +103,7 @@
                                       <tbody>
                                         {{#each orders}}
                                           <tr>
-                                              <td>{{trackingid}}</td>
+                                              <td>{{ordernum}}</td>
                                               <td>{{orderdate}}</td>
                                           </tr>
                                         {{/each}}
@@ -120,29 +120,3 @@
           </div>
       </div>
   </div>
-
-<input type=button value="logout" onClick="eraseCookie()"/>
-
-<script> function eraseCookie() {
-  // make the api call
-  fetch("/api/logout",
-    {method: "POST",
-      headers: {
-        "Accept": "application/json",
-        "Content-Type": "application/json"
-      },
-    })
-    .then(function(response) {
-      if (response.status !== 200) {
-        alert("Logout failed. Try again.");
-        location.reload(true);
-        return
-      } else {
-        // send to a webpage
-        location.reload(true);
-        return;
-      }
-    });
-}
-
-</script>
