--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -112,9 +112,33 @@
               </li>
             </ul>
             <!--This is this login button-->
-            <button onclick = "window.location.href='login'" class="btn btn-primary" type="hidden" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
+            <button onclick = {{#if isDashboard}}"eraseCookie();"{{else}}"window.location.href='login'"{{/if}}"window.location.href='login'" class="btn btn-primary" type="hidden" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">{{#if isDashboard}} Logout {{else if isLogged}} Dashboard {{else}} Log In {{/if}}</button></div>
+
         </div>
     </nav>
+    <script> function eraseCookie() {
+      // make the api call
+      fetch("/api/logout",
+        {method: "POST",
+          headers: {
+            "Accept": "application/json",
+            "Content-Type": "application/json"
+          },
+        })
+        .then(function(response) {
+          if (response.status !== 200) {
+            alert("Logout failed. Try again.");
+            location.reload(true);
+            return
+          } else {
+            // send to a webpage
+            location.reload(true);
+            return;
+          }
+        });
+    }
+
+    </script>
     {{{body}}}
   <!--  <div class="container" style="height: 1180px;"></div>-->
 
