Removed filler text

--- a/views/user_dashboard-edit_info.hbs
+++ b/views/user_dashboard-edit_info.hbs
@@ -99,8 +99,11 @@
                                       </tbody>
                                   </table>
                               </div>
-                          </div><button class="btn btn-primary" id="editAccountInformation" type="button" style="background-color: rgb(79,121,96);margin-top: 15px;font-size: 18px;">Edit Information</button><button class="btn btn-primary text-center" id="sumbitChanges"
-                              type="button" style="background-color: rgb(100,117,207);margin-top: 15px;font-size: 18px;display:none;">Submit Changes</button><button class="btn btn-primary" id="cancelChanges" type="button" style="background-color: rgb(129,130,133);margin-top: 15px;font-size: 18px;display: none;">Cancel</button></div>
+                          </div><button class="btn btn-primary" id="editAccountInformation" type="button" style="background-color: rgb(79,121,96);margin-top: 15px;font-size: 18px;">Edit Information</button> 
+                          <button class="btn btn-primary text-center" id="sumbitChanges"
+                              type="button" style="background-color: rgb(100,117,207);margin-top: 15px;font-size: 18px;display:none;">Submit Changes</button>
+                          <button class="btn btn-primary" id="cancelChanges" type="button" style="background-color: rgb(129,130,133);margin-top: 15px;font-size: 18px;display: none;">Cancel</button>
+                          </div>
                   </div>
               </div>
           </div>
