--- a/views/admin_dashboard-manage_inventory-sub_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-sub_inventory.hbs
@@ -26,7 +26,7 @@
                           class="form-text text-muted" style="font-size: 15px;"><em>Chose either by 'URL' or by 'File' for image selection</em></small>
                   </div>
                   <div class="form-group"><label style="font-size: 20px;"><strong>Description:</strong><textarea class="form-control" id="itemDescription" rows="7" cols="50" required="" minlength="1" placeholder="Description" spellcheck="true" wrap="soft" maxlength="500"></textarea><br></label></div>
-              </form><button class="btn btn-primary" type="button" style="background-color: rgb(79,121,96);font-size: 20px;margin-bottom: 15px;">Submit Item</button></div>
+              </form><button class="btn btn-primary" type="button" method = "post" action = "/api/" style="background-color: rgb(79,121,96);font-size: 20px;margin-bottom: 15px;">Submit Item</button></div>
       </div>
   </div>
 
