Added the create account page

--- a/views/admin_dashboard-manage_accounts.hbs
+++ b/views/admin_dashboard-manage_accounts.hbs
@@ -25,8 +25,11 @@
                       <!--This is the manage accounts section-->
                       <div class="card-body">
                           <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Manage Accounts</h4>
+                          <a href = "/admin_dashboard/manage_accounts/create_account"><button style = "margin-top: -52px; float: right" class="btn btn-primary" id="createAccount">Create an Account!!</button></a></div>
+
                           <div class="col align-self-center m-auto">
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;">
+
                                   <!--This is the table holding the account info-->
                                   <table class="table table-hover">
                                       <thead>
@@ -122,6 +125,7 @@
                                           </tr>
                                       </tbody>
                                   </table>
+                                  
                               </div>
                           </div>
                       </div>
