--- a/views/admin_dashboard-manage_accounts-create_account.hbs
+++ b/views/admin_dashboard-manage_accounts-create_account.hbs
@@ -1,4 +1,26 @@
+<header></header><a href="/admin_dashboard/manage_accounts" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Accounts</a>
+<div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 800px;">
+    <h5 class="text-left" style="color: rgb(133,135,150);font-size: 28px;padding-top: 30px;"><strong>Create An Admin Account</strong></h5>
+    <div class="row">
+        <div class="col text-left" style="padding-top: 15px;padding-bottom: 15px;">
+            <form>
+                <div class="form-group"><label style="font-size: 20px;"><strong>User Name:</strong><br><input class="form-control" type="text" id="username" placeholder="User Name" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>Temporary Password:</strong><br><input class="form-control" type="password" id="password" placeholder="Temp Password" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>First Name:</strong><br><input class="form-control" type="text" id="firstname" placeholder="First Name" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>Last Name:</strong><br><input class="form-control" type="text" id="lastname" placeholder="Last Name" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>E-Mail:</strong><br><input class="form-control" type="email" id="email" placeholder="E-Mail" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>Phone Number:</strong><br><input class="form-control" type="tel" id="phonenumber" placeholder="Phone Number" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>Address:</strong><br><input class="form-control" type="text" id="address" placeholder="Address" required="" minlength="1"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>Zip:</strong><br><input class="form-control" type="text" id="zip" placeholder="Zip" required="" minlength="1" inputmode="numeric"></label></div>
+                <div class="form-group"><label style="font-size: 20px;"><strong>City:</strong><br><input class="form-control" type="text" id="city" placeholder="City" required="" minlength="1"></label></div>
+            </form>
+            <button class="btn btn-primary" id="createAccount">Create Account</button></div>
+    </div>
+</div>
+
 <input type=button value="logout" onClick="eraseCookie()"/>
+
+<!--
 <h2> ADMIN ACCOUNT Create ACCOUNTS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
@@ -100,7 +122,7 @@
         <input type="button" value="Submit" onclick="createAccount()"/>
       </td>
     </tr>
-</form>
+</form> -->
 
 <script> function eraseCookie() {
   // make the api call
